# CrazyFlie_Autoplayer

./: .gitignore  CGAL_defines.h  CMakeLists.txt  Makefile  OptimalPath.cpp  OptimalPath.h  Path.cpp  Path.h  PathPlanner.cpp  PathPlanner.h  PreviewPy1.py  README.md  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  client_side.py  dynamic_preview.py  main.cpp  old_d_preview.py  old_preview.py  only_path_dynamic_preview.py  preview.py  tester.py
tests/: conn_output  d_obstacles  d_output  d_robot1  obstacles1  obstacles2  obstacles9  robot9  sites1  sites2  sites9
tests/old_tests/: obstacles10  obstacles11  obstacles13  obstacles15  obstacles16  obstacles17  obstacles18  obstacles19  obstacles2  obstacles20  obstacles21  obstacles5  obstacles6  obstacles7  obstacles8  obstacles9  robot0  robot10  robot11  robot12  robot13  robot14  robot15  robot16  robot18  robot19  robot2  robot20  robot21  robot3  robot4  robot5  robot6  robot7  robot8  robot9
